--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,100 @@
-theme: jekyll-theme-hacker
+# Site settings
+title: Merlin
+SEOTitle: MERLIN | 博客
+header-img: img/post-bg-desk.jpg
+email: nileimo@gmail.com
+description: 宁静致远
+keyword: "，Code, Photo, Article, Study"
+url: "http://alexmoom.github.io"          # your host, for absolute URL
+baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
+github_repo: "https://github.com/alexmoom/alexmoom.github.io.git" # you code repository
+
+# Sidebar settings
+sidebar: true                           # whether or not using Sidebar.
+sidebar-about-description: "Mysterious Voyager"
+sidebar-avatar: /img/sidebar-avatar.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+
+
+
+# SNS settings
+RSS: false
+# zhihu_username:     merlin33
+github_username:    AlexMOOM
+
+# Build settings
+# from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
+permalink: pretty
+paginate: 10
+exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
+anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
+
+
+
+# Gems
+# from PR#40, to support local preview for Jekyll 3.0
+gems: [jekyll-paginate]
+
+
+
+
+# Markdown settings
+# replace redcarpet to kramdown,
+# although redcarpet can auto highlight code, the lack of header-id make the catalog impossible, so I switch to kramdown
+# document: http://jekyllrb.com/docs/configuration/#kramdown
+markdown: kramdown
+highlighter: rouge
+kramdown:
+  input: GFM                            # use Github Flavored Markdown !important
+
+
+
+# 评论系统
+# Disqus（https://disqus.com/）
+# disqus_username: ALEXMOOM
+
+# Gitalk
+gitalk:
+  enable: true    #是否开启Gitalk评论
+  clientID: 6263477c080df95de904                            #生成的clientID
+  clientSecret: c571cca8199c25e7767b4a8c88dae517ceb6fb95    #生成的clientSecret
+  repo: alexmoom.github.io    #仓库名称
+  owner: AlexMOOM    #github用户名
+  admin: AlexMOOM
+  distractionFreeMode: true #是否启用类似FB的阴影遮罩
+
+
+# 统计
+
+# Analytics settings
+# Baidu Analytics
+# ba_track_id: b50bf2b12b5338a1845e33832976fd68
+
+# Google Analytics
+ga_track_id: 'UA-121634556-1'            # Format: UA-xxxxxx-xx
+ga_domain: auto               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
+
+
+
+
+
+# Featured Tags
+featured-tags: true                     # 是否使用首页标签
+featured-condition-size: 1              # 相同标签数量大于这个数，才会出现在首页
+
+
+
+# Progressive Web Apps
+chrome-tab-theme-color: "#000000"
+service-worker: true
+
+
+# Friends
+friends: [
+   {
+        title: "HUST",
+        href: "http://www.hust.edu.cn"
+    },{
+        title: "GOOGLE",
+        href: "https://www.google.com"
+    }
+]
